kubernetes/hlive_chat_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hlive-chat-service
  namespace: hlive-chat
spec:
  type: ClusterIP
  selector:
    app: hlive-chat-nl
  ports:
    - protocol: TCP
      port: 8503
      targetPort: 8503
